--- a/BuildingEscape/Config/DefaultEngine.ini
+++ b/BuildingEscape/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/NewMap.NewMap
-GameDefaultMap=/Game/Maps/NewMap.NewMap
+EditorStartupMap=/Game/Maps/NewMap2.NewMap2
+GameDefaultMap=/Game/Maps/NewMap2.NewMap2
 GlobalDefaultGameMode="/Script/BuildingEscape.BuildingEscapeGameMode"
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
